[tool.poetry]
name = "pyppeteer"
version = "0.2.2"
description = "Headless chrome/chromium automation library (unofficial port of puppeteer)"
readme = 'README.md'
license = "MIT"
homepage = "https://github.com/pyppeteer/pyppeteer"
repository = "https://github.com/pyppeteer/pyppeteer"
keywords=['pyppeteer', 'puppeteer', 'chrome', 'chromium']
authors = [
    "pyppeteer <pyppeteer@protonmail.com>",
    "granitosaurus <bernardas.alisauskas@pm.me>",
    "Hiroyuki Takagi <miyako.dev@gmail.com>",
]
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Natural Language :: English',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
    ]
packages = [
    { include = "pyppeteer" },
]
include = [
    "README.md",
    "LICENSE",
    "CHANGES.md",
    "tests/*",
    "docs/*",
    "Makefile",
]
exclude = [
    '*/__pycache__',
    '*/*.py[co]',
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pyppeteer/pyppeteer/issues"

[tool.poetry.scripts]
pyppeteer-install = 'pyppeteer.command:install'

[tool.poetry.dependencies]
python = "^3.6.1"
websockets = "^8.1"
appdirs = "^1.4.3"
tqdm = "^4.42.1"
pyee = "^7.0.1"
urllib3 = "^1.25.8"

[tool.poetry.dev-dependencies]
tox = "^3.14.3"
syncer = "^1.3.0"
livereload = "^2.6.1"
flake8 = "^3.7.9"
mypy = "^0.761"
pydocstyle = "^5.0.2"
readme_renderer = "^24.0"
doit = "^0.32.0"
pytest = "^5.3.5"
pytest-xdist = "^1.31.0"
pytest-cov = "^2.8.1"
pylint = "^2.4.4"
m2r = "^0.2.1"
sphinx = "^2.4.0"
sphinxcontrib-asyncio = "^0.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
