[tool.poetry]
name = "pyppeteer"
version = "0.2.2"
description = "Headless chrome/chromium automation library (unofficial port of puppeteer)"
readme = 'README.md'
license = "MIT"
homepage = "https://github.com/pyppeteer/pyppeteer"
repository = "https://github.com/pyppeteer/pyppeteer"
keywords=['pyppeteer', 'puppeteer', 'chrome', 'chromium']
authors = [
    "granitosaurus <bernardas.alisauskas@pm.me>",
    "Hiroyuki Takagi <miyako.dev@gmail.com>",
    "Mattwmaster58 <mattwmaster58@gmail.com>",
    "pyppeteer <pyppeteer@protonmail.com>",
]
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Natural Language :: English',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9'
    ]
packages = [
    { include = "pyppeteer" },
]
include = [
    "README.md",
    "LICENSE",
    "CHANGES.md",
]
exclude = [
    '*/__pycache__',
    '*/*.py[co]',
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pyppeteer/pyppeteer/issues"

[tool.poetry.scripts]
pyppeteer-install = 'pyppeteer.command:install'

[tool.poetry.dependencies]
python = "^3.6.1"
aenum = "^2.2.3"
appdirs = "^1.4.3"
certifi = ">=2019.11.28"
ordered_set = "^4.0.1"
pillow = "^7.1.2"
pyee = "^8.1.0"
tqdm = "^4.42.1"
typing_extensions = { version ="^3.7.4", python = '<3.8'}
typing_inspect = { version ="^0.5.0", python = '<3.8'}
urllib3 = "^1.25.8"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
aiohttp = "^3.6.2"
diff_match_patch = "^20181111"
doit = "^0.32.0"
flake8 = "^3.7.9"
livereload = "^2.6.1"
m2r = "^0.2.1"
mypy = "^0.770"
networkx = "^2.4"
pixelmatch = "^0.2.1"
pre-commit = "^2.2.0"
pydocstyle = "^5.0.2"
pylint = "^2.4.4"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-timeout = "^1.3.4"
pytest-xdist = "^1.31.0"
readme_renderer = "^24.0"
sphinx = "^2.4.0"
sphinxcontrib-asyncio = "^0.2.0"
syncer = "^1.3.0"
tox = "^3.14.3"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
skip-string-normalization = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_third_party = ["PIL", "aiohttp", "appdirs", "certifi", "diff_match_patch", "livereload", "networkx", "ordered_set", "pixelmatch", "pyee", "pyppeteer", "pytest", "syncer", "tests", "tqdm", "urllib3", "websockets"]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
