[tool.poetry]
name = "pyppeteer"
version = "1.0.2"
description = "Headless chrome/chromium automation library (unofficial port of puppeteer)"
readme = 'README.md'
license = "MIT"
homepage = "https://github.com/pyppeteer/pyppeteer"
repository = "https://github.com/pyppeteer/pyppeteer"
keywords=['pyppeteer', 'puppeteer', 'chrome', 'chromium']
authors = [
    "granitosaurus <bernardas.alisauskas@pm.me>",
    "Hiroyuki Takagi <miyako.dev@gmail.com>",
    "Mattwmaster58 <mattwmaster58@gmail.com>",
    "pyppeteer <pyppeteer@protonmail.com>",
]
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Natural Language :: English',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
    ]
packages = [
    { include = "pyppeteer" },
]
include = [
    "README.md",
    "LICENSE",
    "CHANGES.md",
]
exclude = [
    '*/__pycache__',
    '*/*.py[co]',
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pyppeteer/pyppeteer/issues"

[tool.poetry.scripts]
pyppeteer-install = 'pyppeteer.command:install'

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "^1.4.3"
importlib-metadata = ">=1.4"
pyee = "^9.0.0"
tqdm = "^4.42.1"
urllib3 = "^1.25.8"
websockets = "^10.0"
certifi = ">=2021"

[tool.poetry.dev-dependencies]
tox = "^3.20.1"
syncer = "^1.3.0"
livereload = "^2.6.1"
flake8 = "^3.7.9"
m2r = "^0.2.1"
mypy = "^0.770"
pre-commit = "^2.2.0"
pydocstyle = "^5.0.2"
pylint = "^2.4.4"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-xdist = "^1.31.0"
readme_renderer = "^24.0"
sphinx = "^2.4.0"
sphinxcontrib-asyncio = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
skip-string-normalization = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_third_party = ["appdirs", "certifi", "livereload", "pyee", "pyppeteer", "syncer", "tornado", "tqdm", "urllib3", "websockets"]
